--- a/pages/school/detail/detail.wxml
+++ b/pages/school/detail/detail.wxml
@@ -17,32 +17,31 @@
   <!-- 内容滚动区域 -->
   <view class="content-scroll">
     <view wx:if="{{schoolInfo}}">
-      <image class="cover-image" src="{{schoolInfo.cover}}" mode="aspectFill" bindtap="previewImage" data-url="{{schoolInfo.cover}}" />
+      <!-- 顶部背景图区域（包含学校信息） -->
+      <view class="top-background-container">
+        <image class="cover-image" src="{{schoolInfo.cover}}" mode="aspectFill" bindtap="previewImage" data-url="{{schoolInfo.cover}}" />
+        <!-- 渐变遮罩 -->
+        <view class="bg-gradient-overlay"></view>
+        <!-- 学校头像 -->
+        <image class="school-avatar-on-bg" src="{{schoolInfo.icon}}" mode="aspectFill" />
+        <!-- 学校信息 -->
+        <view class="school-info-on-bg">
+          <text class="school-name-on-bg">{{schoolInfo.name}}</text>
+          <view wx:if="{{schoolInfo.provinceCity}}" class="location-row-on-bg">
+            <image class="location-icon-on-bg" src="{{iconLocation}}" mode="aspectFit" />
+            <text>{{schoolInfo.provinceCity}}</text>
+          </view>
+        </view>
+        <!-- 认证标签 -->
+        <view class="cert-tag-wrap-on-bg">
+          <view wx:if="{{schoolInfo.certifiedUnion}}" class="cert-tag" catchtap="viewCertifiedUnion">
+            {{schoolInfo.certifiedUnion.name}}
+          </view>
+        </view>
+      </view>
 
       <!-- 白色背景内容区域 -->
       <view class="white-background">
-        <view class="card">
-          <view class="flex">
-            <image class="avatar avatar-large" src="{{schoolInfo.icon}}" mode="aspectFill" />
-            <view class="flex-1 ml-20">
-              <view class="name-row">
-                <text class="text-primary text-bold">{{schoolInfo.name}}</text>
-                <view class="cert-tag-wrap">
-                  <view wx:if="{{schoolInfo.certifiedUnion}}" class="cert-tag" catchtap="viewCertifiedUnion">
-                    {{schoolInfo.certifiedUnion.name}}
-                  </view>
-                  <view class="cert-tag" catchtap="viewAlumniHeadquarters">
-                    总会测试
-                  </view>
-                </view>
-              </view>
-              <view wx:if="{{schoolInfo.provinceCity}}" class="text-secondary mt-10 location-row">
-                <image class="location-icon" src="{{iconLocation}}" mode="aspectFit" />
-                <text>{{schoolInfo.provinceCity}}</text>
-              </view>
-            </view>
-          </view>
-        </view>
 
         <!-- 基本信息 -->
         <view class="card">
