--- a/pages/local-platform/list/list.wxss
+++ b/pages/local-platform/list/list.wxss
@@ -3,7 +3,7 @@
 /* 页面容器 */
 .container {
   height: 100vh;
-  background: #0089DF;
+  background: #3F61CA;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -17,13 +17,13 @@
   left: 0;
   right: 0;
   height: 350rpx;
-  background: #0089DF;
+  background: #3F61CA;
   z-index: 5;
 }
 
 /* 重置默认样式 */
 page {
-  background: #0089DF;
+  background: #3F61CA;
   padding: 0;
   margin: 0;
 }
@@ -49,7 +49,7 @@ page {
 .header-container {
   position: relative;
   z-index: 15;
-  background: #0089DF;
+  background: #3F61CA;
   border-bottom: none;
 }
 
@@ -68,7 +68,7 @@ page {
   border-radius: 21.74rpx;
   padding: 16rpx 30rpx;
   height: 74.28rpx;
-  background: #0072B3;
+  background: #304BA0;
   border: 1rpx solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
   outline: none;
@@ -281,9 +281,9 @@ view, text, picker, input, button, image, navigator {
   padding: 0 30rpx 20rpx;
   background-color: #F5F5F5;
   background: #F5F5F5;
-  margin-top: -1rpx;
+  margin-top: 0;
   position: relative;
-  z-index: 0;
+  z-index: 1;
   height: calc(100vh - 350rpx);
   padding-bottom: 100rpx;
   overflow: hidden;
