--- a/pages/merchant/list/list.wxml
+++ b/pages/merchant/list/list.wxml
@@ -1,24 +1,34 @@
 <!--pages/merchant/list/list.wxml-->
-<!-- 自定义导航栏 -->
-<custom-nav-bar title="商户" showBack="{{true}}"></custom-nav-bar>
-
 <!-- 消息通知组件 -->
 <message-notification />
 
 <view class="container">
-  <!-- 搜索栏 -->
-  <view class="search-bar">
-    <view class="search-input-wrap">
-      <input class="search-input" type="text" placeholder="搜索商铺名称" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
-      <image class="search-icon" src="{{iconSearch}}" mode="aspectFit" bindtap="onSearch" />
-    </view>
+  <!-- 固定顶部背景 -->
+  <view class="fixed-top-bg"></view>
+  <!-- 自定义导航栏 -->
+  <custom-nav-bar showBack="{{true}}"></custom-nav-bar>
+  <!-- 顶部图片 -->
+  <view class="top-image-container">
+    <image class="top-image" src="https://cni-alumni.yannqing.com/upload/images/2026/02/09/ec78b300-ab01-470d-a504-97eb149caf24.png" mode="aspectFit" />
   </view>
-
-  <!-- 筛选栏 -->
-  <view class="filter-bar">
-    <view class="filter-item" wx:for="{{filters}}" wx:key="label" data-index="{{index}}" bindtap="openFilterOptions">
-      <text>{{item.options[item.selected]}}</text>
-      <text class="filter-arrow">▾</text>
+  
+  <!-- 搜索栏和筛选条件容器 -->
+  <view class="header-container">
+    <!-- 搜索栏 -->
+    <view class="search-bar">
+      <view class="search-input-wrap">
+        <image class="search-left-icon" src="../../../assets/icons/magnifying glass.png" mode="aspectFit" />
+        <input class="search-input" type="text" placeholder="搜索商铺名称" placeholder-style="color:rgba(255,255,255,0.7);font-family:'PingFang SC',sans-serif;" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
+        <view class="search-button" bindtap="onSearch">搜索</view>
+      </view>
+    </view>
+    
+    <!-- 筛选栏 -->
+    <view class="filter-bar">
+      <view class="filter-item" wx:for="{{filters}}" wx:key="label" data-index="{{index}}" bindtap="openFilterOptions">
+        <text>{{item.options[item.selected]}}</text>
+        <text class="filter-arrow">▾</text>
+      </view>
     </view>
   </view>
 
